kubernetes/base/apps/media/nzbget/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  namespace: media
  labels:
    app: nzbget
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      nodeSelector:
        opi.feature.node.kubernetes.io/5plus: "true"

      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 100  # users group

      containers:
        - name: nzbget
          image: ghcr.io/home-operations/nzbget:26.1.0@sha256:37611bd0b2301d30998e984bd57f1331d6a9dba4adfbf2729af79a2be0bb24da
          ports:
            - name: http
              containerPort: 6789
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /data/Downloads
            - name: torrents
              mountPath: /data/torrents
            - name: movies
              mountPath: /data/media/Movies
            - name: series
              mountPath: /data/media/Series
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 2Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nzbget-config
        - name: downloads
          persistentVolumeClaim:
            claimName: nzbget-downloads
        - name: torrents
          nfs:
            server: cardinal.internal
            path: /tank/Media/torrents
        - name: movies
          nfs:
            server: cardinal.internal
            path: /tank/Media/Movies
        - name: series
          nfs:
            server: cardinal.internal
            path: /tank/Media/Series
